compiler/lyra/src/test/resources/illegal/local_var_usage/SelfReferenceWhenInitialied.ly
class Application {
    def main {
        Int x = x; //error
    }
}